--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Ultravision_RentalMedia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\psouz\\Downloads\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
