--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Ultravision_RentalMedia
+application.vendor=psouz
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,12 +31,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Ultravision_RentalMedia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\psouz\\Downloads\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,6 +59,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -64,7 +68,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ultravision_rentalmedia.Ultravision_RentalMedia
+jlink.launcher=false
+jlink.launcher.name=Ultravision_RentalMedia
+main.class=tests.TestClientDao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
