--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-8.0.12.jar=/home/galactus/Public/marcelo_2018269/mysql-connector-java-8.0.17.jar
 user.properties.file=/home/galactus/.netbeans/8.2/build.properties
