--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,13 @@ dist.jar=${dist.dir}/Ultravision_RentalMedia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\psouz\\Downloads\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar=lib\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.17.jar=home/galactus/Public/marcelo_2018269/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
